--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -89,30 +89,42 @@ from student.models import CourseEnrollment
 <div class="dashboard-notifications" tabindex="-1">
 
     %if banner_account_activation_message:
+      <script>
+          console.log("banner_account_activation_message")
+      </script>
         <div class="dashboard-banner">
             ${banner_account_activation_message | n, decode.utf8}
         </div>
     %endif
 
     %if enrollment_message:
+  <script>
+          console.log("enrollment_message")
+      </script>
         <div class="dashboard-banner">
             ${enrollment_message | n,  decode.utf8}
         </div>
     %endif
 
     %if enterprise_message:
+        <script>
+          console.log("enterprise_message")
+      </script>
         <div class="dashboard-banner">
             ${ enterprise_message | n, decode.utf8 }
         </div>
     %endif
 
     %if account_activation_messages:
+
       <script>
+        console.log("account_activation_messages")
         setTimeout(function () {
             alert('${_("Since we sent an email to activate your account, please log back in to your site via your account activation email.. Click OK button to log out automatically.")}');
             document.location.href = "/logout";
         }, 500);
       </script>
+
       <div class="activation-message-container">
         % for account_activation_message in account_activation_messages:
           <div class="account-activation ${account_activation_message.tags}" role="alert" aria-label="Account Activation Message" tabindex="-1">
