--- a/lms/templates/register-form.html
+++ b/lms/templates/register-form.html
@@ -201,7 +201,7 @@ from student.models import UserProfile
       <div class="field ${settings.REGISTRATION_EXTRA_FIELDS['year_of_birth']} select" id="field-yob">
         <label for="yob">${_("Year of Birth")}</label>
         <select id="yob" name="year_of_birth" ${'required aria-required="true"' if settings.REGISTRATION_EXTRA_FIELDS['year_of_birth'] == 'required' else ''}>
-          <option value="">--</option>
+          <option value="888">--</option>
           %for year in UserProfile.VALID_YEARS:
           <option value="${year}">${year}</option>
           %endfor
