--- a/lms/templates/register.html
+++ b/lms/templates/register.html
@@ -19,6 +19,28 @@ import calendar
 
 <%block name="js_extra">
   <script type="text/javascript">
+
+    $(document).ready(function () {
+      var d = new Date();
+      var year = d.getFullYear();
+
+      %if request.session['division'] != 'Y':
+        console.log($("#register-year_of_birth").find("option").val());
+          $("#register-year_of_birth").find("option").each(function(){LogistrationFactory
+              if($(this).val() != "" && eval(year - $(this).val()) > 14)
+                  $(this).remove();
+          });
+
+      %else:
+          console.log($("#register-year_of_birth").find("option").val())
+          $("#register-year_of_birth").find("option").each(function(){
+              if($(this).val() != "" && eval(year - $(this).val()) < 14)
+                  $(this).remove();
+          });
+      %endif
+
+    });
+
     $(function() {
 
       // adding js class for styling with accessibility in mind
