fix: 강좌 난이도 기능 추가

--- a/cms/templates/settings.html
+++ b/cms/templates/settings.html
@@ -426,6 +426,9 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
               <label for="동">강좌 난이도</label>
               <select class="select difficult-degree" id="selectfixid">
                 <option value="">-미선택-</option>
+                % for difficult_row in difficult_degree_list['degree_list']:
+                <option value="${difficult_row[0]}">${difficult_row[1]}</option>
+                % endfor
               </select>
               <span class="tip tip-stacked">강좌 내용의 어려운 수준을 선택하세요.</span>
             </li>
@@ -442,6 +445,75 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
         </div>
         % endif
 
+        % for dgree in difficult_degree_list:
+                        <%
+                        for key, val in difficult_degree_list.items():
+                            print val, key
+                            print val[0]
+                            print val[1]
+                            print val[2]
+
+                            print val[0][0]
+                            print val[0][1]
+
+                            print val[1][0]
+                            print val[1][1]
+
+                            print val[2][0]
+                            print val[2][1]
+
+                            pstr = """var degree = {'category':[{'code':'""" + val[0][0] + """', 'gettext': '""" + val[0][1] + """'}, """
+                            pstr += """{'code':'""" + val[1][0] + """', 'gettext': '""" + val[1][1] + """'}, """
+                            pstr += """{'code':'""" + val[2][0] + """', 'gettext': '""" + val[2][1] + """'},]};"""
+                        %>
+
+
+                        <script type="text/javascript">
+                                ${ pstr | n, trim }
+
+                            var degree_js = function(){
+                                var key = 0;
+                                var difficult_degree_id = document.getElementById("selectfixid");
+                                removeOptions(difficult_degree_id);
+                                input_difficult_degree(difficult_degree_id, 'category');
+                                var idx = $("#txtfixid").val();
+                                if (idx == '"1"') {
+                                    $("#selectfixid").val("1");
+                                } else if (idx == '"2"') {
+                                    $("#selectfixid").val("2");
+                                } else if (idx == '"3"') {
+                                    $("#selectfixid").val("3");
+                                } else {
+                                    $("#selectfixid").val("");
+                                }
+                                $("#selectfixid option:eq(0)").prop("selected", true);
+                            }
+                            var input_difficult_degree = function(selectbox,p_info){
+                                //console.log("run settings_advanced.html javascript calling input_difficult_degree");
+                                var option = document.createElement("option");
+                                option.text = "-미선택-";
+                                option.value = "";
+                                selectbox.appendChild(option);
+                                for(key in degree[p_info]) {
+                                    var row = degree[p_info][key];
+                                    var option = document.createElement("option");
+                                    option.text = row.gettext;
+                                    option.value = row.code;
+                                    selectbox.appendChild(option);
+                                }
+                                $("#selectfixid option:eq(0)").prop("selected", true);
+
+                            }
+                            var removeOptions = function(selectbox){
+                                //console.log("run settings_advanced.html javascript calling removeOptions");
+                                var i;
+                                for(i=selectbox.options.length-1;i>=0;i--){
+                                    selectbox.remove(i);
+                                }
+
+                            }
+                        </script>
+                    % endfor
 
 
         <hr class="divide" />
