--- a/cms/templates/settings.html
+++ b/cms/templates/settings.html
@@ -434,7 +434,7 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
             </li>
             <li class="field" id="field-course-language">
                 <label for="course-language">교수자명</label>
-                <input type="text" id = "teacher_name" value="마코템플릿 삭제teacher_name" placeholder="예: 홍길동, 임꺽정">
+                <input type="text" id = "teacher_name" value="${teacher_name}" placeholder="예: 홍길동, 임꺽정">
                 <span class="tip tip-stacked">교수자가 복수인 경우 콤마(,) 로 구분해서 입력해주세요(예: 홍길동, 임꺽정)</span>
                 <div style="display: none">
                     <div id="addinfo_course_id" >${lms_link_for_about_page}</div>
