--- a/lms/templates/student_account/login_and_register.html
+++ b/lms/templates/student_account/login_and_register.html
@@ -9,7 +9,17 @@
 
 <%inherit file="../main.html" />
 
-<%block name="pagetitle">${_("Sign in or Register")}</%block>
+##<%block name="pagetitle">
+##${_("Sign in or Register")}
+##</%block>
+
+<%block name="pagetitle">
+%if data['initial_mode'] == 'login':
+    ${_("Sign in")}
+%else:
+    ${_("Join Us")}
+%endif
+</%block>
 
 <%block name="js_extra">
     <%static:require_module module_name="js/student_account/logistration_factory" class_name="LogistrationFactory">
